--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>RailsFlatironStore</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-  <%= analytics_init if Rails.env.production? %>
-</head>
-<body>
+  <head>
+    <title>RailsFlatironStore</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+    <%= analytics_init if Rails.env.production? %>
+  </head>
+  <body>
 
-<%= render 'layouts/header' %>
-<%= yield %>
+    <%= render 'layouts/messages' %>
+    <%= render 'layouts/header' %>
+    <%= yield %>
 
-</body>
+  </body>
 </html>
