--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,7 +1,11 @@
+<h4>Categories</h4>
 <% @categories.each do |category| %>
   <%= link_to category.title, category_path(category) %>
 <% end %>
 
+<br><br>
+
+<h4>Items</h4>
 <% @items.each do |item| %>
-  <p><%= item.title %> | <%= number_to_currency(item.price) %> | <%= button_to 'Add to Cart', line_items_path(item_id: item) %></p>
+  <p><%= item.title %> | <%= number_to_currency(item.price.to_f/100) %> <%= button_to 'Add to Cart', line_items_path(item_id: item) if user_signed_in? %></p>
 <% end %>
